syntax = "proto3";

package io.grpc.healthcheck;

option java_multiple_files = true;

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse) {}
  rpc Watch (HealthCheckRequest) returns (stream HealthCheckResponse) {}
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
    string message = 1;
    enum ServingStatus {
      NOT_SERVING = 0;
      SERVING = 1;
    }
}